style.css
/* ... */
.form-input {
    width: 100%;
    padding: 1rem;
    background-color: #ffffff;
    border: 0.7px solid #000000;
    border-radius: 0.375rem;
    color: rgb(0, 0, 0);
    transition: border-color 0.3s;
}

.form-input:focus {
    outline: none;
    border: solid 1.2px;
    border-color: #ff004f;
}

textarea.form-input {
    resize: none;
    flex-grow: 1;
    min-height: 180px;
}

.contact-form-button-container {
    display: flex !important;
    gap: 1rem !important;
    margin-top: 0.5rem !important;
    justify-content: space-between !important;
    margin-bottom: 0.2rem;
    margin-left: 20px;
    margin-right: 20px;
}
.contact-info-button-container {
    display: flex;
    gap: 1rem;
    margin-top: 1.5rem;
    justify-content: space-between;
}

.submit-btn, .download-btn {
    flex: 1;
    padding: 0.75rem 2rem;
    border-radius: 0.375rem;
    text-align: center;
    cursor: pointer;
    transition: all 0.3s;
    font-size: 1rem;
}

.submit-btn {
    background-color: #ff004f;
    color: white;
    border: none;
}

.download-btn {
    border: 2px solid #ff004f;
    color: #ff004f;
    text-decoration: none;
    display: inline-block;
}

.submit-btn:hover {
    background-color: #d4004a;
}

.download-btn:hover {
    background-color: #ff004f;
    color: white;
}

.copyright {
    text-align: center;
    margin-top: 4rem;
    color: #71717A;
}



/* Form styles */


/* .copyright i{
    color: #ff004f;
} */


/* ------------------ css for small screens----------*/

nav .fas{
    display:none;
}
@media only screen and (max-width: 500px){
    #header h1{

        background-image: url("images/phone-background.png");
        /* font-size: 30px; */

    }

    .header-text{
        margin-top: 100%;
        font-size: 16px;

    }
    .header-text h1{
        font-size: 30px;

    }

    nav .fas{
        display:block;
        font-size: 25px;


    }
    nav ul{
        background: #ff004f;
        position: fixed;
        top: 0;
        right: -200px;
        width: 200px;
        height: 100vh;
        padding-top: 50px;
        z-index: 2;
        transition: right 0.5s;






    }

    nav ul li{
        display:block;
        margin:25px;



    }

    nav ul .fas{
        position: absolute;
        top: 25px;
        left: 25px;
        cursor: pointer;



    }

    .sub-title{
        font-size: 40px;

    }

    .about-col-1, .about-col-2{
        flex-basis: 100%;
    }

    .about-col-1{

        margin-bottom: 30px;
    }

    .about-col-2{
        font-size: 14px;

    }

    .tab-links{
        font-size: 16px;
        margin-right: 20px;

    }

    .contact-left, .contact-right{
        flex-basis: 100%;
    }

    .copyright{
        font-size: 14px;

    }










}

